# scene_analyzer

./: .gitignore  output.txt  pyproject.toml  simple_report.py
examples/relation_turning_points/: main.py  print.py  schema.py
examples/relation_turning_points/clues/: act.py  entity.py  temporal.py  tom.py
examples/relation_turning_points/processors/: aliasing.py  result_saver.py  synthesis.py  temporal.py
scripts/: captain_america_civil_war.jsonl  preprocess.py
src/: client.py  inter_scene_analyze.py  intra_scene_analyze.py  main.py  merge_entity.py  schema.py  utils.py
src/clues/: __init__.py  act.py  base.py  entity.py  registry.py  temporal.py  tom.py
src/framework/: __init__.py  aliasing.py  base.py  batch.py  checkpoint.py  checkpoint_session.py  orchestrator.py  pipeline.py  pipeline_helpers.py  processor.py  prompts.py  registry.py  result.py  schema.py  synthesis.py  temporal.py  utils.py  validation.py
src/framework/core/: __init__.py  base.py  batch.py  pipeline.py  processor.py  registry.py  result.py  validation.py
src/processors/: aliasing.py  result_saver.py  synthesis.py  temporal.py  types.py
