[project]
name = "framework"
version = "0.9.9"
description = "Extensible framework for narrative analysis"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "google-genai>=1.39.1",
    "networkx>=3.5",
    "pydantic>=2.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/framework"]
